fix letter spacing for label and hint styles across all UI

--- a/features/ui/select/select.module.scss
+++ b/features/ui/select/select.module.scss
@@ -79,14 +79,12 @@
   font: font.$text-sm-medium;
   color: color.$gray-700;
   margin-bottom: 5px;
-  letter-spacing: 0.45px;
 }
 
 .hint {
   font: font.$text-sm-regular;
   color: color.$gray-500;
   margin-top: 5px;
-  letter-spacing: 0.4px;
 }
 
 .errorMessage {
